--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -38,7 +38,6 @@ $yellow:  #FAD02C;
 $green:   #A3C14A;
 $teal:    #20c997;
 $cyan:    #47D8E0;
-$primary: #ff7a57;
 
 $colors: ();
 $colors: map-merge((
@@ -58,11 +57,11 @@ $colors: map-merge((
 ), $colors);
 
 
-$primary:       $primary;
+$primary:       $red;
 $secondary:     $gray-600;
 $success:       $green;
 $info:          $cyan;
-$warning:       $yellow;
+$warning:       $orange;
 $danger:        $red;
 $light:         $gray-100;
 $dark:          $gray-800;
@@ -84,74 +83,69 @@ $theme-colors: map-merge(
 );
 
 
-$body-bg:                   $white;
-$body-color:                $gray-700;
 
-
-////////////////////////////////////////////////
-// Breadcrumb
-$breadcrumb-bg:                     transparent;
-
-
-
-////////////////////////////////////////////////
-// Code
-$pre-color:             $gray-700;
-$pre-bg:                $gray-200;
-$pre-border-color:      $gray-400;
-
-
-
-////////////////////////////////////////////////
-// Buttons + inputs
-$input-btn-padding-y:         .65rem;
-$input-btn-padding-x:         .9rem;
-
-$input-btn-focus-width:       .2rem;  
-
-$input-btn-padding-y-sm:      .35rem;
-$input-btn-padding-x-sm:      .7rem;
-
-$input-btn-padding-y-lg:      .7rem;
-$input-btn-padding-x-lg:      1rem;
- 
-
-
-// Buttons
+// Fonts
 //
-// For each of Bootstrap's buttons, define text, background, and border color.
-  
-$btn-disabled-opacity:        .65;
-$btn-active-box-shadow:       inset 0 3px 5px rgba($black, .125);
+// Font, line-height, and color for body text, headings, and more.
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap');
 
-$btn-link-disabled-color:     $gray-600;
-
-$btn-block-spacing-y:         .5rem;
-
-// Allows for customizing button radius independently from global border radius
-
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      'Source Sans Pro', sans-serif;
+$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-base:            $font-family-sans-serif;
+$headings-font-family:        'Dosis', sans-serif;
+// stylelint-enable value-keyword-case
 
 
 
 
+// Pagination
+
+$pagination-padding-y:              .3rem;
+$pagination-padding-x:              .7rem;
+$pagination-padding-y-sm:           .15rem;
+$pagination-padding-x-sm:           .5rem;
+$pagination-padding-y-lg:           .4rem ;
+$pagination-padding-x-lg:           1rem ;
+$pagination-border-color:           transparent;
+$pagination-color:                  $gray-800;
+$pagination-hover-bg:               rgba($primary, .3);
+$pagination-hover-border-color:     transparent;
 
 
 
+// Breadcrumbs
+
+$breadcrumb-padding-y:              .55rem;
+$breadcrumb-bg:                     transparent;
+$breadcrumb-font-size:              .9rem;
+
+$breadcrumb-divider-color:          $gray-900;
+$breadcrumb-active-color:           $gray-700;
+$breadcrumb-link-color:             $gray-900;
+$breadcrumb-divider:                quote("·");
 
 
 
+// Navbar
+
+$navbar-padding-y:                  .8rem;
+$navbar-nav-link-padding-x:         1.5rem;
+$navbar-light-color:                rgba($black, .8);
 
 
 
+// Progress bars
+$progress-height:                   .3rem;
+
+
+// cards
+$card-border-radius:                0;
 
 
 
-
-
-
-
-
-
+// links
+$link-hover-decoration:     none;
 
 
 
